@@ -20,7 +20,7 @@
 #
 [common]
 # This is the line input to StepperDemo:
-build_flags = -D SIM_TEST_INPUT='"M1 A10000 V40 R64000 M2 A11000 V40 R64000 M3 A12000 V40 R64000 W M2 W M1 W t W "' -D SIMAVR_TIME_MEASUREMENT_QUEUE
+build_flags = -D SIM_TEST_INPUT='"M1 A10000 V40 R64000 M2 A11000 V40 R64000 M3 A12000 V40 R64000 W M2 W M1 W t W "' -D SIMAVR_TIME_MEASUREMENT_QUEUE -D SIMAVR_FOC_WORKAROUND
 
 [env:atmega2560_timer4]
 platform    = atmelavr
