@@ -59,6 +59,12 @@
 #define EnableCompareInterrupt(T, X) TIMSK##T |= _BV(OCIE##T##X)
 #define ClearInterruptFlag(T, X) TIFR##T = _BV(OCF##T##X)
 #define SetTimerCompareRelative(T, X, D) OCR##T##X = TCNT##T + D
+#ifdef SIMAVR_FOC_WORKAROUND
+#define ClearInterruptFlag_FOCworkaround(T, X) ClearInterruptFlag(T, X)
+#else
+#define ClearInterruptFlag_FOCworkaround(T, X) \
+  {}
+#endif
 
 #define ConfigureTimer(T)                                                 \
   {                                                                       \
@@ -114,6 +120,8 @@ void StepperQueue::init(uint8_t queue_num, uint8_t step_pin) {
 // generates a L->H transition. In any case, the current command's
 // wait time has still to be executed for the next command, if any.
 //
+// Remark: Interrupt Flag is automatically cleared on ISR execution
+//
 // If reaching here without further commands, then the queue is done
 #define AVR_STEPPER_ISR(T, CHANNEL)                                           \
   ISR(TIMER##T##_COMP##CHANNEL##_vect) {                                      \
@@ -138,7 +146,7 @@ void StepperQueue::init(uint8_t queue_num, uint8_t step_pin) {
       /* Clear output bit by another compare event */                         \
       Stepper_OneToZero(T, CHANNEL);                                          \
       ForceCompare(T, CHANNEL);                                               \
-      ClearInterruptFlag(T, CHANNEL);                                         \
+      ClearInterruptFlag_FOCworkaround(T, CHANNEL);                           \
       if (e->steps-- > 1) {                                                   \
         /* perform another step with this queue entry */                      \
         Stepper_One(T, CHANNEL);                                              \
@@ -159,7 +167,7 @@ void StepperQueue::init(uint8_t queue_num, uint8_t step_pin) {
         /* Clear output bit by another toggle */                              \
         Stepper_OneToZero(T, CHANNEL);                                        \
         ForceCompare(T, CHANNEL);                                             \
-        ClearInterruptFlag(T, CHANNEL);                                       \
+        ClearInterruptFlag_FOCworkaround(T, CHANNEL);                         \
         if (e->steps-- > 1) {                                                 \
           /* perform another step with this queue entry */                    \
           Stepper_One(T, CHANNEL);                                            \
